--- a/scss/styles.css
+++ b/scss/styles.css
@@ -138,7 +138,11 @@ header {
 }
 .header__right__nav__ul {
   display: flex;
-  gap: 2rem;
+}
+@media (min-width: 29em) {
+  .header__right__nav__ul {
+    gap: 2rem;
+  }
 }
 @media (min-width: 29em) {
   .header__right {
@@ -153,7 +157,18 @@ header {
           user-select: none;
   transition: color 200ms, background-color 200ms;
   color: white;
-  padding: 1rem;
+  padding-block: 1rem;
+  padding-inline: 0.3rem;
+}
+@media (min-width: 25em) {
+  .header__right__link--two a {
+    padding-inline: 0.6rem;
+  }
+}
+@media (min-width: 29em) {
+  .header__right__link--two a {
+    padding: 1rem;
+  }
 }
 @media (hover: hover) {
   .header__right__link--two a:hover {
@@ -186,9 +201,13 @@ header {
 }
 .main__greeting__buttons {
   display: flex;
-  margin-left: -0.7rem;
   gap: 1rem;
   margin-top: 1.5rem;
+}
+@media (min-width: 42.75em) {
+  .main__greeting__buttons {
+    margin-left: -0.7rem;
+  }
 }
 .main__greeting__buttons__link {
   width: 3rem;
